--- a/.github/workflows/young_whale_recap.yml
+++ b/.github/workflows/young_whale_recap.yml
@@ -44,29 +44,39 @@ jobs:
 
           files = sorted(glob.glob("history/**/*.json", recursive=True))
           if not files:
-            msg = f"🧭 <b>Recap ultime {HOURS}h</b>\nNessun dato disponibile."
-            open("out/recap/recap.html","w",encoding="utf-8").write(msg)
-            exit(0)
+              msg = f"🧭 <b>Recap ultime {HOURS}h</b>\nNessun dato disponibile."
+              open("out/recap/recap.html","w",encoding="utf-8").write(msg)
+              raise SystemExit(0)
 
           def dex_link(pair, token):
-            if pair: return f"https://dexscreener.com/bsc/{pair}"
-            return f"https://dexscreener.com/bsc/{token}"
+              if pair: return f"https://dexscreener.com/bsc/{pair}"
+              return f"https://dexscreener.com/bsc/{token}"
 
           def zerion(addr):
-            return f"https://app.zerion.io/{addr}/overview"
+              return f"https://app.zerion.io/{addr}/overview"
+
+          def short_addr(a: str) -> str:
+              a = (a or "").strip()
+              if a.startswith("0x") and len(a) > 12:
+                  return a[:6] + "..." + a[-4:]
+              if len(a) > 12:
+                  return a[:6] + "..." + a[-4:]
+              return a
 
           def fmt_money(v):
-            try:
-              return f\"${float(v):,.0f}\".replace(\",\", \" \")
-            except:
-              return str(v)
+              try:
+                  return f"${float(v):,.0f}".replace(",", " ")
+              except Exception:
+                  return str(v)
 
           def parse_ts(j):
-            ts = j.get("ts")
-            if ts:
-              try: return datetime.fromisoformat(ts.replace("Z","+00:00")).timestamp()
-              except: pass
-            return None
+              ts = j.get("ts")
+              if ts:
+                  try:
+                      return datetime.fromisoformat(ts.replace("Z","+00:00")).timestamp()
+                  except Exception:
+                      pass
+              return None
 
           per_token = {}
           overall_top = {}
@@ -78,62 +88,63 @@ jobs:
           buys_usd_total = 0.0
 
           for f in files:
-            try:
-              j = json.load(open(f,"r",encoding="utf-8"))
-            except Exception:
-              continue
-            ts_run = parse_ts(j)
-            if ts_run is None or ts_run < since_ts or ts_run > now_ts:
-              continue
-
-            sym = j.get("symbol") or "TOKEN"
-            token_addr = j.get("token") or ""
-            pair = j.get("main_pair_hint") or ""
-            price = j.get("price_usd")
-
-            stats = j.get("stats") or {}
-            agg = j.get("agg") or {}
-
-            d = per_token.setdefault(sym, {
-              "token": token_addr,
-              "pair": pair,
-              "runs": 0,
-              "iterations": 0,
-              "wallets_seen": 0,
-              "buys_usd": 0.0,
-              "prices": [],
-              "top_map": {}
-            })
-
-            d["runs"] += 1
-            d["iterations"] += int(stats.get("total_swaps_scanned") or 0)
-            d["wallets_seen"] += int(agg.get("buyers_unique_all") or stats.get("wallet_unici_ge_min_usd") or 0)
-            try:
-              d["buys_usd"] += float(agg.get("buyers_total_usd_window_all") or 0.0)
-            except:
-              pass
-            if price is not None:
               try:
-                d["prices"].append((ts_run, float(price)))
-              except:
-                pass
+                  j = json.load(open(f,"r",encoding="utf-8"))
+              except Exception:
+                  continue
+              ts_run = parse_ts(j)
+              if ts_run is None or ts_run < since_ts or ts_run > now_ts:
+                  continue
 
-            for w in (agg.get("top_spenders_all") or []):
-              addr = (w.get("address") or "").strip()
-              amt = float(w.get("sum_buys_usd_window") or 0.0)
-              name = (w.get("user_name") or "").strip()  # nome solo se validato
-              if not addr:
-                continue
-              d["top_map"][addr] = d["top_map"].get(addr, 0.0) + amt
-              overall_top[addr] = overall_top.get(addr, 0.0) + amt
-              if name:
-                addr_name[addr] = name
+              sym = j.get("symbol") or "TOKEN"
+              token_addr = j.get("token") or ""
+              pair = j.get("main_pair_hint") or ""
+              price = j.get("price_usd")
 
+              stats = j.get("stats") or {}
+              agg = j.get("agg") or {}
+
+              d = per_token.setdefault(sym, {
+                "token": token_addr,
+                "pair": pair,
+                "runs": 0,
+                "iterations": 0,
+                "wallets_seen": 0,
+                "buys_usd": 0.0,
+                "prices": [],
+                "top_map": {}
+              })
+
+              d["runs"] += 1
+              d["iterations"] += int(stats.get("total_swaps_scanned") or 0)
+              d["wallets_seen"] += int(agg.get("buyers_unique_all") or stats.get("wallet_unici_ge_min_usd") or 0)
+              try:
+                  d["buys_usd"] += float(agg.get("buyers_total_usd_window_all") or 0.0)
+              except Exception:
+                  pass
+              if price is not None:
+                  try:
+                      d["prices"].append((ts_run, float(price)))
+                  except Exception:
+                      pass
+
+              for w in (agg.get("top_spenders_all") or []):
+                  addr = (w.get("address") or "").strip()
+                  amt = float(w.get("sum_buys_usd_window") or 0.0)
+                  name = (w.get("user_name") or "").strip()  # nome presente SOLO se wallet validato
+                  if not addr:
+                      continue
+                  d["top_map"][addr] = d["top_map"].get(addr, 0.0) + amt
+                  overall_top[addr] = overall_top.get(addr, 0.0) + amt
+                  if name:
+                      addr_name[addr] = name  # non sovrascrivo se vuoto
+
+          # Aggregati globali
           for sym, d in per_token.items():
-            runs_total += d["runs"]
-            iterations_total += d["iterations"]
-            wallets_seen_total += d["wallets_seen"]
-            buys_usd_total += d["buys_usd"]
+              runs_total += d["runs"]
+              iterations_total += d["iterations"]
+              wallets_seen_total += d["wallets_seen"]
+              buys_usd_total += d["buys_usd"]
 
           header = f'🧭 <b>Recap ultime {HOURS}h</b> (UTC)\n<code>{since.strftime("%Y-%m-%d %H:%M")} → {now.strftime("%Y-%m-%d %H:%M")}</code>\n'
           ov1 = f'📦 Run: <b>{runs_total}</b>  •  🔁 Iterazioni: <b>{iterations_total}</b>\n'
@@ -141,48 +152,48 @@ jobs:
           ov3 = f'💵 Volume acquisti (>= soglia): <b>{fmt_money(buys_usd_total)}</b>\n'
           parts = [header, ov1, ov2, ov3, ""]
 
-          # Top overall (max 5)
+          # Top overall (max 5) — testo link = nome se presente, altrimenti address troncato
           top_overall = sorted(overall_top.items(), key=lambda kv: kv[1], reverse=True)[:5]
           if top_overall:
-            parts.append("👑 <b>Top buyer globali</b>")
-            lines = []
-            for i,(addr,amt) in enumerate(top_overall, start=1):
-              nm = html.escape(addr_name.get(addr, addr))
-              link = zerion(addr)
-              lines.append(f"{i}) <a href=\"{link}\"><b>{nm}</b></a> — {fmt_money(amt)}")
-            parts.append("\n".join(lines))
-            parts.append("")
+              parts.append("👑 <b>Top buyer globali</b>")
+              lines = []
+              for i,(addr,amt) in enumerate(top_overall, start=1):
+                  display = addr_name.get(addr, short_addr(addr))
+                  link = zerion(addr)
+                  lines.append(f'{i}) <a href="{link}"><b>{html.escape(display)}</b></a> — {fmt_money(amt)}')
+              parts.append("\n".join(lines))
+              parts.append("")
 
           # Sezioni per token
           for sym, d in sorted(per_token.items()):
-            ptxt = ""
-            if d["prices"]:
-              d["prices"].sort(key=lambda x: x[0])
-              p0 = d["prices"][0][1]
-              p1 = d["prices"][-1][1]
-              if p0 and p1 is not None:
-                delta = p1 - p0
-                pct = (delta / p0 * 100.0) if p0 != 0 else 0.0
-                sign = "↗️" if pct > 0 else ("↘️" if pct < 0 else "→")
-                ptxt = f"💱 Prezzo: <b>{p1:.6f}</b> ({sign} {pct:+.2f}%)"
+              ptxt = ""
+              if d["prices"]:
+                  d["prices"].sort(key=lambda x: x[0])
+                  p0 = d["prices"][0][1]
+                  p1 = d["prices"][-1][1]
+                  if p0 and p1 is not None:
+                      delta = p1 - p0
+                      pct = (delta / p0 * 100.0) if p0 != 0 else 0.0
+                      sign = "↗️" if pct > 0 else ("↘️" if pct < 0 else "→")
+                      ptxt = f"💱 Prezzo: <b>{p1:.6f}</b> ({sign} {pct:+.2f}%)"
 
-            link = dex_link(d["pair"], d["token"])
-            head = f'🪙 <a href="{link}"><b>{html.escape(sym)}</b></a>'
-            meta = f' — run: <b>{d["runs"]}</b> • 🔁 <b>{d["iterations"]}</b> • 👛 <b>{d["wallets_seen"]}</b> • 💵 <b>{fmt_money(d["buys_usd"])}</b>'
-            parts.append(head + meta)
-            if ptxt:
-              parts.append(ptxt)
+              link = dex_link(d["pair"], d["token"])
+              head = f'🪙 <a href="{link}"><b>{html.escape(sym)}</b></a>'
+              meta = f' — run: <b>{d["runs"]}</b> • 🔁 <b>{d["iterations"]}</b> • 👛 <b>{d["wallets_seen"]}</b> • 💵 <b>{fmt_money(d["buys_usd"])}</b>'
+              parts.append(head + meta)
+              if ptxt:
+                  parts.append(ptxt)
 
-            # top buyers per token (max 3)
-            top_tok = sorted(d["top_map"].items(), key=lambda kv: kv[1], reverse=True)[:3]
-            if top_tok:
-              lines = []
-              for i,(addr,amt) in enumerate(top_tok, start=1):
-                nm = html.escape(addr_name.get(addr, addr))
-                linkw = zerion(addr)
-                lines.append(f"{i}) <a href=\"{linkw}\"><b>{nm}</b></a> — {fmt_money(amt)}")
-              parts.append("👑 Top buyer:\n" + "\n".join(lines))
-            parts.append("")
+              # top buyers per token (max 3) — testo link troncato se manca nome
+              top_tok = sorted(d["top_map"].items(), key=lambda kv: kv[1], reverse=True)[:3]
+              if top_tok:
+                  lines = []
+                  for i,(addr,amt) in enumerate(top_tok, start=1):
+                      display = addr_name.get(addr, short_addr(addr))
+                      linkw = zerion(addr)
+                      lines.append(f'{i}) <a href="{linkw}"><b>{html.escape(display)}</b></a> — {fmt_money(amt)}')
+                  parts.append("👑 Top buyer:\n" + "\n".join(lines))
+              parts.append("")
 
           msg = "\n".join(parts).strip()
           open("out/recap/recap.html","w",encoding="utf-8").write(msg)
@@ -198,7 +209,7 @@ jobs:
             exit 0
           fi
           API="https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage"
-          # Invia SEMPRE un unico messaggio (no split)
+          # invia sempre un solo messaggio
           curl -sS -X POST "$API" \
             --data-urlencode "chat_id=${TG_CHAT_ID}" \
             --data-urlencode "text=$TEXT" \
