--- a/.github/workflows/young_whale_finder.yml
+++ b/.github/workflows/young_whale_finder.yml
@@ -2,7 +2,7 @@ name: Young Whale Finder (every 20 min)
 
 on:
   schedule:
-    - cron: "*/20 * * * *"   # ogni 20 minuti (UTC)
+    - cron: "*/20 * * * *"  
   workflow_dispatch: {}
 
 permissions:
@@ -48,7 +48,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq
 
-      - name: Run YWF on 5 tokens (sequential)
+      - name: Run YWF on tokens (sequential)
         id: ywf
         shell: bash
         run: |
@@ -63,12 +63,13 @@ jobs:
           TOKENS["LA"]="0x389AD4bb96d0D6EE5B6eF0EFAF4b7db0bA2e02a0"
           TOKENS["RIVER"]="0xdA7AD9dea9397cffdDAE2F8a052B82f1484252B3"
           TOKENS["KGEN"]="0xF3d5b4c34Ed623478cc5141861776E6cf7AE3A1E"
+          TOKENS["SOON"]="0xb9E1Fd5A02D3A33b25a14d661414E6ED6954a721"
 
           mkdir -p out
 
           EXIT_CODE=0
           # ordine fisso (inclusa RIVER)
-          for SYM in AIA BLESS B2 LA RIVER KGEN; do
+          for SYM in AIA BLESS B2 LA RIVER KGEN SOON; do
             ADDR="${TOKENS[$SYM]}"
             echo "Running ${SYM} (${ADDR})"
             CMD="python young_whale_finder.py \
